[package]
name = "iam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5", features = ["request-id"] }
tokio = { version = "1.38.*", features = ["rt-multi-thread", "macros", "sync"]}
serde = "1.0.*"
serde_json = "1.0.*"
rs-utils = {git = "https://github.com/w6d-io/rs-utils",features = ["kratos", "anyhow-rocket"]}
figment = "0.10.*"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "1.4.0"
ory-kratos-client = "1.0.0"
tonic = "0.12.*"
prost = "0.13.1"
thiserror = "1.0.40"
axum-server = { version = "0.6.*", features = ["tls-rustls"] }
rustls-pemfile = "1.0.4"
tokio-rustls = "0.24"
h2 = "0.4.5"
openssl = "0.10.60"
stream-cancel = "0.8.2"

[dev-dependencies]
mime = "0.3"
nix = "0.29.0"

[build-dependencies]
tonic-build = "0.12.*"
